--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -19,26 +19,92 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/background" />
 
     <CheckBox
         android:id="@+id/cb_kinder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="150dp"
-        android:layout_marginLeft="150dp"
-        android:layout_marginTop="136dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
         android:minHeight="48dp"
         android:text="@string/rundenbasis"
-        android:textSize="25sp"
+        android:textSize="20sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/numberPicker"
         app:layout_constraintEnd_toStartOf="@+id/etn_sucht"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_Spieler"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <ImageButton
+        android:id="@+id/rundenbasis_info"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:background="@drawable/pixil_button_main"
+        android:onClick="btn_info_rundenbasis"
+        android:scaleType="fitCenter"
+        android:src="@drawable/pixel_info"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/numberPicker"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.53"
+        app:layout_constraintStart_toEndOf="@+id/cb_kinder"
+        app:layout_constraintTop_toBottomOf="@+id/tv_Spieler"
+        app:layout_constraintVertical_bias="0.933" />
+
+    <EditText
+        android:id="@+id/etn_sucht"
+        android:layout_width="105dp"
+        android:layout_height="47dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
+        android:ems="10"
+        android:inputType="numberSigned"
+        android:minHeight="48dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/numberPicker"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_Spieler"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <ImageButton
+        android:id="@+id/zufall_info"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:background="@drawable/pixil_button_main"
+        android:onClick="btn_info_zufall"
+        android:scaleType="fitCenter"
+        android:src="@drawable/pixel_info"
+        app:layout_constraintBottom_toTopOf="@+id/numberPicker"
+        app:layout_constraintEnd_toStartOf="@+id/cb_kinder"
+        app:layout_constraintHorizontal_bias="0.194"
+        app:layout_constraintStart_toEndOf="@+id/swch_zufall"
+        app:layout_constraintTop_toBottomOf="@+id/tv_Spieler"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <Switch
+        android:id="@+id/swch_zufall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="36dp"
+        android:layout_marginLeft="36dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/pixel_art"
+        android:minHeight="48dp"
+        android:scrollbarThumbHorizontal="?attr/primaryTitleColor"
+        android:scrollbarThumbVertical="?attr/primaryTitleColor"
+        android:text="@string/zufall_aus"
+        android:textColor="?attr/primaryTitleColor"
+        android:textColorHint="?attr/primaryTitleColor"
+        android:textOff="AUS"
+        android:textOn="ON"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/numberPicker"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_Spieler"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/textView2"
@@ -46,7 +112,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="150dp"
         android:layout_marginLeft="150dp"
-        android:layout_marginTop="156dp"
+        android:layout_marginTop="36dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
         android:fontFamily="@font/pixel_art"
@@ -54,34 +120,20 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="?attr/primaryTitleColor"
         android:textColorHint="#000000"
-        android:textSize="24sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/numberPicker"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.848"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_Spieler" />
-
-    <EditText
-        android:id="@+id/etn_sucht"
-        android:layout_width="105dp"
-        android:layout_height="47dp"
-        android:layout_marginTop="136dp"
-        android:layout_marginEnd="148dp"
-        android:layout_marginRight="148dp"
-        android:ems="10"
-        android:inputType="numberSigned"
-        android:minHeight="48dp"
-        android:visibility="invisible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/zufall_info" />
 
     <NumberPicker
         android:id="@+id/numberPicker"
-        android:layout_width="100dp"
-        android:layout_height="130dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginEnd="148dp"
-        android:layout_marginRight="148dp"
+        android:layout_width="81dp"
+        android:layout_height="98dp"
+        android:layout_marginTop="68dp"
+        android:layout_marginEnd="336dp"
+        android:layout_marginRight="336dp"
         android:scrollbarThumbHorizontal="?attr/primaryTitleColor"
         android:scrollbarThumbVertical="?attr/primaryTitleColor"
         android:textSize="24sp"
@@ -102,7 +154,7 @@
         android:text="@string/hinzufuegen"
         android:textColor="?attr/primaryTitleColor"
         android:textColorHint="@color/mainText"
-        android:textSize="24sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.47"
@@ -123,10 +175,10 @@
         android:minHeight="48dp"
         android:textColor="?attr/primaryTitleColor"
         android:textColorHint="?attr/primaryTitleColor"
-        android:textSize="24sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.082"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -144,7 +196,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="?attr/primaryTitleColor"
         android:textColorHint="@color/mainText"
-        android:textSize="20sp"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -152,8 +204,8 @@
 
     <Button
         android:id="@+id/btn_zumSpiel"
-        android:layout_width="192dp"
-        android:layout_height="61dp"
+        android:layout_width="163dp"
+        android:layout_height="51dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/pixil_button_main"
         android:fontFamily="@font/pixel_art"
@@ -161,17 +213,16 @@
         android:padding="15dp"
         android:text="@string/start"
         android:textColor="?attr/primaryTitleColor"
-        android:textSize="34sp"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ListView
         android:id="@+id/lv_kategorie"
-        android:layout_width="673dp"
-        android:layout_height="149dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginBottom="32dp"
+        android:layout_width="601dp"
+        android:layout_height="145dp"
+        android:layout_marginTop="132dp"
         android:paddingLeft="70dp"
         android:paddingTop="10dp"
         android:paddingRight="70dp"
@@ -182,64 +233,8 @@
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/btn_zumSpiel"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cb_kinder"
-        app:layout_constraintVertical_bias="0.907" />
-
-    <Switch
-        android:id="@+id/swch_zufall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:fontFamily="@font/pixel_art"
-        android:minHeight="48dp"
-        android:scrollbarThumbHorizontal="?attr/primaryTitleColor"
-        android:scrollbarThumbVertical="?attr/primaryTitleColor"
-        android:text="@string/zufall_aus"
-        android:textColor="?attr/primaryTitleColor"
-        android:textColorHint="?attr/primaryTitleColor"
-        android:textOff="AUS"
-        android:textOn="ON"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_Spieler"
-        app:layout_constraintVertical_bias="0.291" />
-
-    <ImageButton
-        android:id="@+id/rundenbasis_info"
-        android:layout_width="46dp"
-        android:layout_height="46dp"
-        android:layout_marginTop="84dp"
-        android:layout_marginEnd="180dp"
-        android:layout_marginRight="180dp"
-        android:background="@drawable/pixil_button_main"
-        android:onClick="btn_info_rundenbasis"
-        android:scaleType="fitCenter"
-        android:src="@drawable/pixel_info"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/cb_kinder"
-        app:layout_constraintTop_toBottomOf="@+id/numberPicker" />
-
-    <ImageButton
-        android:id="@+id/zufall_info"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:background="@drawable/pixil_button_main"
-        android:onClick="btn_info_zufall"
-        android:scaleType="fitCenter"
-        android:src="@drawable/pixel_info"
-        app:layout_constraintBottom_toTopOf="@+id/numberPicker"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.26"
-        app:layout_constraintStart_toEndOf="@+id/swch_zufall"
-        app:layout_constraintTop_toBottomOf="@+id/tv_Spieler"
-        app:layout_constraintVertical_bias="0.6" />
+        app:layout_constraintTop_toBottomOf="@+id/numberPicker"
+        app:layout_constraintVertical_bias="0.818" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
