--- a/app/src/main/res/layout-sw600dp/activity_a_c_bearbeiten.xml
+++ b/app/src/main/res/layout-sw600dp/activity_a_c_bearbeiten.xml
@@ -22,8 +22,8 @@
 
     <Button
         android:id="@+id/btn_add"
-        android:layout_width="369dp"
-        android:layout_height="76dp"
+        android:layout_width="305dp"
+        android:layout_height="59dp"
         android:layout_marginBottom="24dp"
         android:background="@drawable/pixil_button_main"
         android:fontFamily="@font/pixel_art"
@@ -35,27 +35,25 @@
         android:text="@string/Aufgabeadd"
         android:textColor="?attr/primaryTitleColor"
         android:textColorHint="?attr/primaryTitleColor"
-        android:textSize="30sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_Aufgabe"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/et_Aufgabe"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="32dp"
         android:ems="15"
         android:gravity="start|top"
         android:hint="@string/hint_aufgabe"
         android:inputType="textMultiLine"
         android:textColor="?attr/primaryTitleColor"
         android:textColorHint="?attr/primaryTitleColor"
-        android:textSize="30sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner" />
@@ -74,8 +72,8 @@
 
     <TextView
         android:id="@+id/textView9"
-        android:layout_width="429dp"
-        android:layout_height="183dp"
+        android:layout_width="637dp"
+        android:layout_height="92dp"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginEnd="24dp"
@@ -91,7 +89,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_Aufgabe"
-        app:layout_constraintVertical_bias="0.35" />
+        app:layout_constraintVertical_bias="0.719" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
