sw-480dp angepasst (Android TV)

--- a/app/src/main/res/layout-sw480dp/activity_einstellungen.xml
+++ b/app/src/main/res/layout-sw480dp/activity_einstellungen.xml
@@ -22,8 +22,8 @@
 
     <ImageButton
         android:id="@+id/btn_ton"
-        android:layout_width="125dp"
-        android:layout_height="130dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_marginTop="32dp"
         android:background="@drawable/pixil_button_main"
         android:onClick="btn_einstellung_ton"
@@ -37,8 +37,8 @@
 
     <ImageButton
         android:id="@+id/imgbtn_rewardw"
-        android:layout_width="142dp"
-        android:layout_height="138dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_marginTop="32dp"
         android:background="@drawable/ads"
         android:onClick="btn_werbung"
@@ -51,7 +51,7 @@
         android:id="@+id/switch1"
         android:layout_width="318dp"
         android:layout_height="70dp"
-        android:layout_marginTop="212dp"
+        android:layout_marginTop="128dp"
         android:text="@string/dark"
         android:textColor="?attr/primaryTitleColor"
         android:textColorHint="?attr/primaryTitleColor"
@@ -93,7 +93,7 @@
         android:textColor="?attr/primaryTitleColor"
         android:textSize="36sp"
         android:textStyle="bold"
-        android:visibility="invisible"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/btn_sprache_save"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -112,23 +112,23 @@
         android:textColor="?attr/primaryTitleColor"
         android:textColorHint="?attr/primaryTitleColor"
         android:textSize="34sp"
-        android:visibility="invisible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btn_50"
-        android:layout_width="230dp"
-        android:layout_height="80dp"
-        android:layout_marginTop="112dp"
+        android:layout_width="165dp"
+        android:layout_height="68dp"
+        android:layout_marginTop="80dp"
         android:background="@drawable/pixil_button_main"
         android:onClick="btn_ladesammeln50"
         android:scaleType="fitCenter"
         android:text="@string/fuenfzig"
         android:textColor="?attr/primaryTitleColor"
         android:textColorHint="?attr/primaryTitleColor"
-        android:textSize="45sp"
+        android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView"
@@ -145,7 +145,7 @@
         android:textAlignment="center"
         android:textColor="?attr/primaryTitleColor"
         android:textColorHint="?attr/primaryTitleColor"
-        android:textSize="34sp"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -160,7 +160,7 @@
         android:textAlignment="center"
         android:textColor="?attr/primaryTitleColor"
         android:textColorHint="?attr/primaryTitleColor"
-        android:textSize="34sp"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_50" />
