--- a/app/src/main/res/layout-sw480dp/activity_main.xml
+++ b/app/src/main/res/layout-sw480dp/activity_main.xml
@@ -22,37 +22,36 @@
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/background" />
 
-    <CheckBox
-        android:id="@+id/cb_kinder"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginEnd="25dp"
-        android:layout_marginRight="25dp"
-        android:layout_marginBottom="16dp"
-        android:minHeight="48dp"
-        android:text="@string/rundenbasis"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/lv_kategorie"
-        app:layout_constraintEnd_toStartOf="@+id/etn_sucht"
-        app:layout_constraintHorizontal_bias="0.588"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.754" />
-
     <NumberPicker
         android:id="@+id/numberPicker"
         android:layout_width="70dp"
         android:layout_height="96dp"
-        android:layout_marginTop="152dp"
-        android:layout_marginEnd="100dp"
-        android:layout_marginRight="100dp"
+        android:layout_marginTop="84dp"
+        android:layout_marginEnd="444dp"
+        android:layout_marginRight="444dp"
         android:scrollbarThumbHorizontal="?attr/primaryTitleColor"
         android:scrollbarThumbVertical="?attr/primaryTitleColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_Spieler" />
+
+    <EditText
+        android:id="@+id/tp_spieler"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="252dp"
+        android:layout_marginLeft="252dp"
+        android:layout_marginTop="32dp"
+        android:ems="10"
+        android:fontFamily="@font/pixel_art"
+        android:hint="@string/tp_name"
+        android:inputType="textPersonName"
+        android:minHeight="48dp"
+        android:textColor="?attr/primaryTitleColor"
+        android:textColorHint="?attr/primaryTitleColor"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btn_add"
@@ -60,7 +59,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="60dp"
         android:layout_marginRight="60dp"
         android:background="@drawable/pixil_button_main"
@@ -74,27 +73,8 @@
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.125"
+        app:layout_constraintHorizontal_bias="0.208"
         app:layout_constraintStart_toEndOf="@+id/tp_spieler"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/tp_spieler"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
-        android:layout_marginLeft="60dp"
-        android:layout_marginTop="24dp"
-        android:ems="10"
-        android:fontFamily="@font/pixel_art"
-        android:hint="@string/tp_name"
-        android:inputType="textPersonName"
-        android:minHeight="48dp"
-        android:textColor="?attr/primaryTitleColor"
-        android:textColorHint="?attr/primaryTitleColor"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -122,6 +102,7 @@
         android:id="@+id/btn_zumSpiel"
         android:layout_width="170dp"
         android:layout_height="48dp"
+        android:layout_marginTop="8dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/pixil_button_main"
         android:fontFamily="@font/pixel_art"
@@ -143,7 +124,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
         android:layout_marginLeft="100dp"
-        android:layout_marginTop="192dp"
+        android:layout_marginTop="116dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
         android:fontFamily="@font/pixel_art"
@@ -154,21 +135,20 @@
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/numberPicker"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.935"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_Spieler" />
 
     <ListView
         android:id="@+id/lv_kategorie"
-        android:layout_width="477dp"
-        android:layout_height="194dp"
-        android:layout_marginTop="148dp"
+        android:layout_width="738dp"
+        android:layout_height="121dp"
+        android:layout_marginTop="16dp"
         android:paddingLeft="70dp"
         android:paddingRight="70dp"
         android:scrollbarThumbHorizontal="?attr/primaryTitleColor"
         android:scrollbarThumbVertical="?attr/primaryTitleColor"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/numberPicker" />
 
@@ -191,10 +171,10 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.355"
+        app:layout_constraintHorizontal_bias="0.166"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_Spieler"
-        app:layout_constraintVertical_bias="0.455" />
+        app:layout_constraintVertical_bias="0.125" />
 
     <ImageButton
         android:id="@+id/zufall_info"
@@ -207,44 +187,56 @@
         android:src="@drawable/pixel_info"
         app:layout_constraintBottom_toBottomOf="@+id/numberPicker"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.218"
+        app:layout_constraintHorizontal_bias="0.081"
         app:layout_constraintStart_toEndOf="@+id/swch_zufall"
         app:layout_constraintTop_toBottomOf="@+id/tv_Spieler"
-        app:layout_constraintVertical_bias="0.252" />
+        app:layout_constraintVertical_bias="0.072" />
 
     <EditText
         android:id="@+id/etn_sucht"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="36dp"
-        android:layout_marginRight="36dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginLeft="52dp"
         android:ems="10"
         android:inputType="numberSigned"
         android:minHeight="48dp"
         android:textSize="20sp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/lv_kategorie"
+        app:layout_constraintBottom_toTopOf="@+id/numberPicker"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.754" />
+        app:layout_constraintStart_toEndOf="@+id/cb_kinder"
+        app:layout_constraintTop_toBottomOf="@+id/tv_Spieler" />
+
+    <CheckBox
+        android:id="@+id/cb_kinder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="108dp"
+        android:layout_marginLeft="108dp"
+        android:minHeight="48dp"
+        android:text="@string/rundenbasis"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/numberPicker"
+        app:layout_constraintStart_toEndOf="@+id/zufall_info"
+        app:layout_constraintTop_toBottomOf="@+id/tv_Spieler" />
 
     <ImageButton
         android:id="@+id/rundenbasis_info"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_marginEnd="150dp"
-        android:layout_marginRight="150dp"
+        android:layout_marginStart="128dp"
+        android:layout_marginLeft="128dp"
         android:background="@drawable/pixil_button_main"
         android:onClick="btn_info_rundenbasis"
         android:scaleType="fitCenter"
         android:src="@drawable/pixel_info"
         android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/lv_kategorie"
+        app:layout_constraintBottom_toTopOf="@+id/numberPicker"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.93"
+        app:layout_constraintHorizontal_bias="0.116"
         app:layout_constraintStart_toEndOf="@+id/cb_kinder"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.655" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_Spieler" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
