--- a/app/src/main/res/layout-sw320dp/activity_a_c_bearbeiten.xml
+++ b/app/src/main/res/layout-sw320dp/activity_a_c_bearbeiten.xml
@@ -44,12 +44,14 @@
 
     <EditText
         android:id="@+id/et_Aufgabe"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="286dp"
+        android:layout_height="113dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         android:autofillHints=""
-        android:layout_marginTop="32dp"
         android:ems="15"
         android:gravity="start|top"
         android:hint="@string/hint_aufgabe"
@@ -60,7 +62,7 @@
         android:textColorHint="?attr/primaryTitleColor"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.529"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner" />
 
@@ -83,9 +85,9 @@
         android:layout_marginLeft="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
-        android:padding="20dp"
         android:autoSizeTextType="uniform"
         android:gravity="center_horizontal"
+        android:padding="20dp"
         android:text="@string/infoBearbeiten"
         android:textAlignment="center"
         android:textAllCaps="false"
@@ -95,6 +97,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_Aufgabe"
-        app:layout_constraintVertical_bias="0.35" />
+        app:layout_constraintVertical_bias="0.213" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
