--- a/app/src/main/res/layout-sw720dp/activity_a_c_bearbeiten.xml
+++ b/app/src/main/res/layout-sw720dp/activity_a_c_bearbeiten.xml
@@ -44,8 +44,8 @@
 
     <EditText
         android:id="@+id/et_Aufgabe"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="938dp"
+        android:layout_height="187dp"
         android:layout_marginTop="50dp"
         android:autofillHints=""
         android:ems="15"
@@ -91,10 +91,10 @@
         android:textColorHint="?attr/primaryTitleColor"
         app:layout_constraintBottom_toTopOf="@+id/btn_add"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_Aufgabe"
-        app:layout_constraintVertical_bias="0.597" />
+        app:layout_constraintVertical_bias="0.334" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
